--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Semen Shneider HW_21</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1 style="text-align: center;">Semen Shneider CV (demo version)</h1>
+<h1>Semen Shneider CV (demo version)</h1>
 
-<table>
+<table class="profile-table">
     <tr>
         <td>
-            <img src="photos/portrait.jpg" width="200">
+            <img src="photos/portrait.jpg" width="200" class="profile-pic">
         </td>
         <td>
             <p>
@@ -35,8 +36,8 @@
     </tr>
 </table>
 
-<h2 style="text-align: center;">SKILLS</h2>
-<ul>
+<h2>SKILLS</h2>
+<ul class="skills-list">
     <li>Communication - Build strong relationships and communicate effectively both verbally and in writing.</li>
     <li>Teamwork and Collaboration - Work efficiently within teams to achieve goals.</li>
     <li>Adaptability - Quickly adapt to new roles and solve problems under pressure.</li>
@@ -47,8 +48,8 @@
     <li>Event Planning and Organization - Planning and executing engaging activities.</li>
 </ul>
 
-<h2 style="text-align: center;">LANGUAGES</h2>
-<table align="center">
+<h2>LANGUAGES</h2>
+<table class="languages-table">
     <tr>
         <td>English</td>
         <td>Upper intermediate (B2)</td>
